<resources>
    <string name="app_name">Manual de laboratorio</string>
    <string name="app_subtitle">Escu</string>
    <string name="logotipo_esi">Logotipo ESI</string>
    <string name="logotipo_gunt">Logotipo GUNT</string>
    <string name="text_acerca_de">Esta aplicación ha sido desarrollada por Santiago J. Mas Peña,
        para uso como manual de laboratorio, para la asignatura de Resistencia de Materiales y Estructuras.
        Para cualquier duda o consulta, enviar un correo a manual.laboratorio.rme.uca@gmail.com.</string>
    <string name="identificador_uca">Identificador UCA</string>
    <string name="clave_uca">Clave</string>
    <string name="identificador">Identificador</string>
    <string name="clave">Clave</string>
    <string name="inicio_de_sesion">Inicio de sesión</string>
    <string name="acceder_alumno">Acceder como alumno</string>
    <string name="acceder_anonimo">Acceder como usuario anónimo</string>
    <string name="elige_app">Elige el manual de laboratorio.</string>
    <string name="elige_practica">Elige la práctica a realizar</string>
    <string name="donde_estas">¿Dónde estás?</string>
    <string name="tipo_practica">¿Cómo quieres hacer la práctica?</string>
    <string name="manual_pandeo">Práctica de Pandeo</string>
    <string name="manual_torsion">Práctica de Torsión</string>
    <string name="manual_traccion">Práctica de Tracción</string>
    <string name="manual_flexión">Práctica de Flexión</string>
    <string name="baul">Baúl</string>
    <string name="test">Test</string>
    <string name="pesas">Pesas</string>
    <string name="barra_dos_ganchos">1 - Barra de dos ganchos.</string>
    <string name="barra_circular">2 - Barra de sección circular.</string>
    <string name="barra_rectangular">3 - Barra de sección rectangular.</string>
    <string name="pesas_grandes">4 - Juego de pesas grandes.</string>
    <string name="pesas_pequeñas">5 - Juego de pesas pequeñas.</string>
    <string name="Llaves">6 - Llaves.</string>
    <string name="ampli">7 - Amplificador.</string>
    <string name="cable">8 -  Cable de conexión.</string>
    <string name="apoyo_articulado">Apoyo articulado.</string>
    <string name="apoyo_empotrado">Apoyo empotrado.</string>
    <string name="barra_cuad_500mm">Barra cuadrada de 500 mm</string>
    <string name="barra_cuad_1000m">Barra cuadrada de 1000 mm</string>
    <string name="soporte5N">Soporte con carga 5 N</string>
    <string name="pesa5N">Pesa de 5 N</string>
    <string name="pesa10N">Pesa de 10 N</string>
    <string name="pesa20N">Pesa de 20 N</string>
    <string name="carga_aleatoria">Carga: %1$d N</string>
    <string name="RA">Realidad Aumentada</string>
    <string name="calculos">Cálculos</string>
    <string name="momento_torsor">Momento Torsor\nexperimental en Nm:</string>
    <string name="carga_critica_pandeo">Carga crítica de Euler\nexperimental en N:</string>
    <string name="valor_amplificador">Indicación del\namplificador en mv/V:</string>
    <string name="titulo_cuestionario">Cuestionario</string>
    <string name="titulo_fin">Final del manual</string>
    <string name="guion">- %1$s</string>
    <string name="datos_correctos">Datos correctos</string>
    <string name="titulo_encuesta">Encuesta</string>
    <string name="facilidad_uso">Facilidad de uso</string>
    <string name="ayuda_aprendizaje">Ayuda al aprendizaje</string>
    <string name="compresion_preguntas">Facilidad de comprensión</string>
    <string name="interfaz_usuario">Interfaz de usuario</string>
    <string name="experiencia_usuario">Experiencia de usuario</string>
    <string name="error_lectura_firebase">Error a leer la base de datos</string>
    <string name="error_datos_alumno_vacios">Debes introducir el identicador y la clave de acceso</string>
    <string name="error_datos_alumno_incorrectos">El identificador o la clave
        introducidos son incorrectos</string>
    <string name="error_practica_no_implementada">Esta práctica de laboratorio aún no ha sido implementada</string>
    <string name="error_lugar_practica_vacio">Debes seleccionar el lugar donde vas a utilizar el manual</string>
    <string name="error_datos_practicas">Se ha producido un error cargando los datos de la práctica</string>
    <string name="error_barra_pandeo">Te has equivocado eligiendo la barra</string>
    <string name="error_apoyos_pandeo">Te has equivocado eligiendo los apoyos</string>
    <string name="error_materiales_torsion">Te has equivocado eligiendo los materiales para la práctica de torsión</string>
    <string name="error_pesas_torsion">Te has equivocado eligiendo las pesas necesarias para tu carga que se te ha asignado</string>
    <string name="error_soporte_pesas_vacio">Tienes que incluir el soporte de las pesas</string>
    <string name="error_materiales_vacios">Tienes que seleccionar los materiales necesarios para la práctica</string>
    <string name="error_valores_vacios">Tienes que introducir los valores pedidos</string>
    <string name="error_respuestas_vacias">Debes seleccionar obligatoriamente una opción para cada elemento de la lista</string>
    <string name="error_demasiados_caracteres">Has sobrepasado el número máximo de caracteres permitidos.</string>
    <string name="boton_comenzar">Comenzar</string>
    <string name="boton_ajustes">Ajustes</string>
    <string name="boton_acercaDe">Acerca de…</string>
    <string name="boton_continuar">Continuar</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="boton_anterior">Retroceder</string>
    <string name="boton_explicacion">Explicación</string>
    <string name="boton_ubicacion">Ubicación</string>
    <string name="boton_en_lab">Laboratorio C13</string>
    <string name="boton_fuera">Fuera del laboratorio</string>
    <string name="boton_con_manual">Con el manual</string>
    <string name="boton_sin_manual">Sin el manual</string>
    <string name="boton_comenzarAR">Comenzar Realidad Aumentada</string>
    <string name="boton_terminado">Terminado</string>
    <string name="boton_saltar">Saltar Realidad Aumentada</string>
    <string name="boton_vuelta_inicio">Volver al inicio</string>
    <string name="boton_fin_aplicacion">Salir de la aplicación</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_salir">Salir</string>
    <string name="boton_enviar_email">Enviar email</string>
    <string name="boton_finalizar">Finalizar</string>
    <string name="boton_realizar_encuesta">Realizar encuesta de satisfacción</string>
    <string name="boton_comenzar_encuesta">Comenzar encuesta</string>
    <string name="boton_enviar">Enviar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="selecciona_app">Elige si estás en el laboratorio C13 de la ESI o en otro lugar, y
        seguidamente selecciona la práctica que quieres realizar:</string>
    <string name="manual_introduccion">Hola, somos Laura y Dave. Con esta aplicación te vamos a ayudar
        para que puedas realizar la práctica de %1$s de esta asignatura.</string>
    <string name="manual_materiales_intro">Estos son todos los materiales disponibles para realizar la práctica.</string>
    <string name="manual_materiales_torsion">Para la práctica de torsión solo vas a necesitar:\n2 - Barra de sección circular.
        \n4 - Juego de pesas grandes.\n7 - Amplificador.\n8 - Cable.</string>
    <string name="manual_materiales_pandeo">Para la práctica de pandeo se te ha asignado:\n- Barra de acero S2 de %1$s mm\n- %2$s\n- %3$s</string>
    <string name="elige_materiales">Marca aquellos materiales que vayas a necesitar:</string>
    <string name="manual_carga_intro1">Para esta práctica se te ha asignado la siguiente carga en N:</string>
    <string name="manual_torsion_carga">Carga: %1$s N</string>
    <string name="manual_carga_intro2">Elige las pesas necesarias para conseguir esa carga. Recuerda
        que el soporte es necesario.</string>
    <string name="prepara_maquina_torsion_lab">Coloca el marcador TORSION LABORATORIO sobre la máquina
        tal como se ve en la imagen. </string>
    <string name="prepara_maquina_pandeo_lab">Coloca el marcador PANDEO LABORATORIO  sobre la máquina
        tal como se ve en la imagen.</string>
    <string name="prepara_maquina_torsion_casa">Coloca el marcador TORSION FUERA sobre una superficie
        horizontal y bien iluminada.</string>
    <string name="prepara_maquina_pandeo_casa">Coloca el marcador PANDEO FUERA sobre una superficie
        horizontal y bien iluminada.</string>
    <string name="movil_posicion_horizontal">Pon el móvil en posición horizontal y presiona el botón
        de comenzar.</string>
    <string name="movil_posicion_vertical">Mantén el móvil en posición vertical y presiona el botón
        de comenzar</string>
    <string name="intro_calculos_torsion">Ahora te voy a mostrar los datos necesarios para que realices
        el cálculo del momento de torsión.</string>
    <string name="intro_calculos_pandeo">Ahora te voy a mostrar los datos relevantes al cálculo de
        la deformación por pandeo. No los vas a necesitar,
        pero es bueno recordarlos.</string>
    <string name="realizar_calculos">Cálculos</string>
    <string name="resolver_ecuacion_torsion">Para calcular el Momento Torsor, emplea esta ecuación:</string>
    <string name="introduce_resultado_pandeo">Introduce el valor experimental de desviación por pandeo
        que hayas registrado:</string>
    <string name="introduce_resultados">Introduce la solución cuando la tengas calculada:</string>
    <string name="datos_experimento">Datos experimentales</string>
    <string name="datos_automaticos">Se han introducido automáticamente los datos que se obtendrían
        al realizar el experimento en el laboratorio.</string>
    <string name="titulo_mensaje_error_momento_torsion">El momento calculado no es correcto.</string>
    <string name="cuerpo_mensaje_error_momento_torsion">Tu momento resultado está fuera del rango de
        ± 5%. Puedes modificar tu resultado o continuar con la práctica.</string>
    <string name="titulo_mensaje_error_ampli_torsion">El valor del amplificador no es correcto.</string>
    <string name="cuerpo_mensaje_error_ampli_torsion">Revisa que el amplificador esté bien conectado
        al pórtico. Si estás seguro de tu resultado, continua con la práctica.</string>
    <string name="titulo_mensaje_error_carga_pandeo">La carga crítica calculada no es correcta.</string>
    <string name="cuerpo_mensaje_error_carga_pandeo">Tu carga calculada está fuera del rango de ± 5%.
        Puedes modificar tu resultado o continuar con la práctica.</string>
    <string name="introduccion_cuestionario">Ahora vas a realizar un cuestionario sobre la práctica
        que acabas de realizar. Serán 4 preguntas de respuesta múltiple, de las que
    tendrás que elegir una de la posibles respuestas. ¡Suerte!</string>
    <string name="texto_final_bien">Enhorabuena, has acertado todas las preguntas. Esperamos que te
        haya gustado realizar la práctica con nosotros. Si quieres, puedes realizar una pequeña
        encuesta sobre esta aplicación. Para ello, pulsa el botón de Realizar encuesta.\nTambién
        puedes repetir la práctica o hacer otra distinta pulsando el botón de Volver al inicio.</string>
    <string name="introduccion_encuesta">El objetivo de esta encuesta es evaluar la calidad de esta
        aplicación como manual de laboratorio en la Escuela Superior de Ingeniería.\n\nTus respuestas
    serán utilizadas por el departamento de Ingeniería Mecánica de la ESI para mejorar la calidad del
    aprendizaje de los alumnos.\n\nLa encuesta dura unos 4 minutos, y tus respuestas serán completamente
    confidenciales. Por favor, responde honestamente.\n\nPara cualquier duda o consulta, envía un correo
    electrónico a manual.laboratorio.rme.uca@gmail.com</string>
</resources>