<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="labSelectionViewModel"
            type="uca.esi.manual.screens.selection.LabSelectionViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context=".screens.selection.LabSelectionFragment">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/elige_app"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.024" />

            <TextView
                android:id="@+id/explicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginBottom="436dp"
                android:background="?attr/textView_background"
                android:padding="8dp"
                android:text="@string/selecciona_app"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo"
                app:layout_constraintVertical_bias="0.196" />

            <TextView
                android:id="@+id/donde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/donde_estas"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/explicacion"
                app:layout_constraintVertical_bias="0.047" />

            <RadioGroup
                android:id="@+id/radioEnLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="128dp"
                android:background="?attr/textView_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/donde"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/radioButtonLab"
                    style="@android:style/Widget.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{labSelectionViewModel.inLab}"
                    android:onClick="@{()->labSelectionViewModel.onClickInLab()}"
                    android:paddingHorizontal="8dp"
                    android:text="@string/boton_en_lab" />

                <RadioButton
                    android:id="@+id/radioButtonFuera"
                    style="@android:style/Widget.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{!labSelectionViewModel.inLab}"
                    android:onClick="@{()->labSelectionViewModel.onClickOutside()}"
                    android:paddingHorizontal="8dp"
                    android:text="@string/boton_fuera" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="52dp"
                android:text="@string/elige_practica"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioEnLab"
                app:layout_constraintVertical_bias="0.055" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                app:constraint_referenced_ids="buttonTorsion,
            buttonPandeo, buttonTraccion, buttonFlexion"
                app:flow_firstHorizontalStyle="packed"
                app:flow_horizontalGap="8dp"
                app:flow_maxElementsWrap="2"
                app:flow_verticalGap="8dp"
                app:flow_wrapMode="chain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonTorsion"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{()->labSelectionViewModel.onTorsionClick()}"
                android:text="@string/manual_torsion"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonPandeo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/flow" />

            <Button
                android:id="@+id/buttonPandeo"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginEnd="14dp"
                android:gravity="center"
                android:onClick="@{()->labSelectionViewModel.onPandeoClick()}"
                android:text="@string/manual_pandeo"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonTorsion"
                app:layout_constraintTop_toTopOf="@+id/flow" />

            <Button
                android:id="@+id/buttonFlexion"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginEnd="14dp"
                android:gravity="center"
                android:onClick="@{()->labSelectionViewModel.onFlexionClick()}"
                android:text="@string/manual_flexión"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/flow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonTraccion"
                app:strokeWidth="2dp" />


            <Button
                android:id="@+id/buttonTraccion"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:onClick="@{()->labSelectionViewModel.onTraccionClick()}"
                android:text="@string/manual_traccion"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/flow"
                app:layout_constraintEnd_toStartOf="@+id/buttonFlexion"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeWidth="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>